--- a/news.html
+++ b/news.html
@@ -38,17 +38,16 @@
             <a name="news1">
                 <div class="news1_mine">
                     <div class="left">
-                        <img src="img/karantin.jpg">
+                        <img src="img/news_bar.jpg">
                     </div>
                     <div class="right">
-                        <p><b>14-04-2020</b></p>
-                        <p>Карантин</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna
-                            aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                            ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            Ut enim ad minim veniam, quis nostrud exercitation
-                            ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                        <p><b>01-06-2020</b></p>
+                        <p>Бар</p>
+                        <p>
+                            В связи с началом лета мы открыли новый бар
+                            в которо вы теперь можете покупать себе прохлаждающие
+                            и полезные напитки. 
+                        </p>
                     </div>
                 </div>
             </a>
@@ -59,14 +58,12 @@
                     <img src="img/news_shop.jpg">
                 </div>
                 <div class="right">
-                    <p><b>14-04-2020</b></p>
-                    <p>Карантин</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    <p><b>04-05-2020</b></p>
+                    <p>Новый завоз</p>
+                    <p>В нашем интернет магазине обновился асортимент новыми 
+                    разновидностями протеиновых напитков. Теперь вы можете выбрать себе
+                    протеин на любой вкус и цвет. Их качество проверено в европейских лабораториях.
+                    Так же мы снизили цену на товары.</p>
                 </div>
             </div>
             </a>
@@ -74,17 +71,18 @@
             <a name="news3">
             <div class="news1_mine">
                 <div class="left">
-                    <img src="img/news_bar.jpg">
+                    <img src="img/karantin.jpg">
                 </div>
                 <div class="right">
                     <p><b>14-04-2020</b></p>
                     <p>Карантин</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    <p>
+                        Уважаемые клиенты!
+                        Нет ничего важнее, чем здоровье наших гостей и сотрудников.
+                        В связи с эпидемиологической ситуацией в стране и с целью предупреждения
+                        распространения коронавируса мы приняли решение о закрытии всех 
+                        подразделений фитнес системы «Hard gym», включая и залы .
+                        Всем клиентам на время карантина будет предоставлена заморозка абонемента. </p>
                 </div>
             </div>
             </a>
