--- a/prog3.html
+++ b/prog3.html
@@ -38,24 +38,18 @@
             </div>
             <div class="text">
                 <p><b>Набрать массу</b></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Если ваша цель посещения фитнес-клуба — похудеть, мы предлагаем вам несколько вариантов:
+                    Занятия с персональным тренером.</p>
+                  <p>  Самый эффективный способ. Наши опытные тренеры составят индивидуальный план тренировок с оптимальной нагрузкой для организма.
+                    Занятия в зале групповых программ.</p>
+                  <p>  Среди наших групповых занятий вы точно сможете выбрать тренировку по душе и сделаете свою фигуру лучше!
+                    Самостоятельные занятия в тренажерном зале.</p>
+                    <p>Занимайтесь в тренажерном зале самостоятельно и достигайте цели! Но при условии, что ранее у вас был персональный тренер, который составил вам программу тренировок для похудения.
+                    Консультации по питанию.</p>
+                   <p> Любые программы похудения работают в комплексе с правильным питанием. И мы очень рекомендуем обратиться к специалисту по вопросам питания при работе над снижением веса.
+                    Марафоны по похудению.</p>
+                   <p> Главная «изюминка» таких марафонов — комплексный подход к вопросам похудения и взаимная мотивации участников. Если вы наш клиент, мы вам обязательно сообщим, о проведении очередного марафона.</p>
+                <br>
             </div>
         <div class="footer">
             <div class="address">
