--- a/index.html
+++ b/index.html
@@ -124,23 +124,24 @@
         <div class="section">
             <div class="box">
                 <img src="img/news_bar.jpg">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>В связи с началом лета мы открыли новый бар в которо вы теперь
+                    можете покупать себе прохлаждающие и полезные напитки.</p>
                 <p><a href="news.html#news1">читать далее</a></p>
             </div>
             <div class="box">
                 <img src="img/news_shop.jpg">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>В нашем интернет магазине обновился асортимент новыми разновидностями
+                    протеиновых напитков. Теперь вы можете выбрать себе протеин на любой
+                    вкус и цвет. Их качество проверено в европейских лабораториях. Так же
+                    мы снизили цену на товары.</p>
                 <p><a href="news.html#news2">читать далее</a></p>
             </div>
             <div class="box">
                 <img src="img/karantin.jpg">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p> В связи с эпидемиологической ситуацией в стране
+                    и с целью предупреждения распространения коронавируса мы приняли
+                    решение о закрытии всех подразделений фитнес системы «Hard gym»,
+                    включая и залы . </p>
                 <p><a href="news.html#news3">читать далее</a></p>
             </div>
         </div>
