--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         sed do eiusmod tempor incididunt ut labore et dolore magna
                         aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                         ullamco laboris nisi ut aliquip. </p>
-                    <p><a href="shop.html">перейти в магазин</a></p>
+                    <p><a href="shop.html">в магазин</a></p>
                 </div>
             </div>
         </div>
