--- a/prog1.html
+++ b/prog1.html
@@ -22,8 +22,8 @@
             <div id="menu_m">
                 <ul>
                     <a href="index.html"><li>Главная</li></a>
-                    <a href="shop.html"><li class="active">Магазин</li></a>
-                    <a href="index.html#programm"><li>Программы</li></a>
+                    <a href="shop.html"><li>Магазин</li></a>
+                    <a href="index.html#programm"><li class="active" class="active">Программы</li></a>
                     <a href="news.html"><li>Новости</li></a>
                     <a href="log.html"><li>Вход</li></a>
                 </ul>
